# radar_simulator_ros2

./: .gitignore  README.md  frames_2025-06-18_12.26.39.gv  frames_2025-06-25_14.32.08.gv  frames_2025-06-26_13.14.50.gv  frames_2025-07-09_12.32.50.gv  frames_2025-07-09_12.34.07.gv  frames_2025-07-09_12.38.09.gv  frames_2025-07-24_12.25.14.gv  frames_2025-07-24_12.34.57.gv
src/mesh_tools/mesh_msgs_conversions/: CMakeLists.txt
src/mesh_tools/rviz_mesh_tools_plugins/: CMakeLists.txt
src/meshes/: two_cubes.dae
src/mimo_gazebo_plugin/: CMakeLists.txt  MIMOradarays_embree_gzplugin_cpp.cpp  MIMOradarays_embree_gzplugin_header.h  avz_collada.world  mimoradarays_embree_gzregister_cpp.cpp  mimoradarays_embree_ros_gzplugin_cpp.cpp  mimoradarays_embree_ros_gzplugin_header.h  mimoradarays_optix_gzplugin_cpp.cpp  mimoradarays_optix_gzplugin_header.h  mimoradarays_optix_gzregister_cpp.cpp  mimoradarays_optix_ros_gzplugin_cpp.cpp  mimoradarays_optix_ros_gzplugin_header.h  package.xml
src/radar_tools/: CMakeLists.txt  package.xml
src/radar_tools/config/: image_slicer.yaml  img_to_pcl.yaml  navtech.yaml  plot_img_column.yaml
src/radar_tools/include/radar_tools/: ImgSlicerConfig.hpp
src/radar_tools/launch/: image_compare.launch.py  image_slicer.launch.py  plot_img_column.launch.py  radar_img_to_pcl.launch.py
src/radar_tools/msg/: ImageCompMetrics.msg  RadarInfo.msg
src/radar_tools/scripts/: compare_radar_images.py  compare_radar_images_writer.py  image_topic_to_file.py  plot3d_radar_image.py  plot_img_column.py  publish_image_file.py
src/radar_tools/src/: image_slicer.cpp  radar_img_to_pcl.cpp
src/radarays_ros_interfaces/: CMakeLists.txt  package.xml
src/radarays_ros_mimo/: CMakeLists.txt  Radar.cpp  Radar.hpp  RadarCPU.cpp  RadarCPU.hpp  RadarGPU.cpp  RadarGPU.hpp  example  gpu_beamforming.cu.txt  gpu_beamforming.hpp.txt  mesh_publisher.cpp  oru4_test.yaml  package.xml  params.yaml.txt  radar_model.yaml.yaml  radar_sim.launch.py.txt  radar_sim_test.launch  radar_simulator (1).cpp  ray_reflection.yaml.yaml  ros_helper.cpp  ros_helper.h
src/rmagine_example/: CMakeLists.txt  package.xml
src/rmagine_example/src/: vlp16_example.cpp
